[package]
name = "contextvm-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the ContextVM protocol — MCP over Nostr"
license = "MIT"
repository = "https://github.com/k0sti/rust-contextvm-sdk"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2.0"
async-trait = "0.1"

# Nostr SDK with NIP-59 (Gift Wrap) support
nostr-sdk = { version = "0.43", features = ["nip59"] }

# Logging
tracing = "0.1"
rmcp = "1.3.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
